--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html { height: 100%; margin: 0; padding: 0;}
-body { height: 97%; margin: 0; padding: 0;}
+body { height: 98%; margin: 0; padding: 0; background: black; position: relative;}
 .fullScreen{height: 100%; margin: 0; padding: 0; position: relative;}
 #map-canvas { height: 93%; margin-bottom: 1rem; }
 .buttons{
@@ -8,13 +8,58 @@ body { height: 97%; margin: 0; padding: 0;}
 	position: absolute;
 	bottom: 0;
 	color: white;
+	border-radius: 50%;
+	height: 40px;
+	width: 40px;
+	font-family: FontAwesome;
 }
 .hidden{
 	display:none;
 }
 
-#foundIt{background:blue; right: 10px;}
-#parkedIt{background:black; right: 10px;}
-.directions{background: green; left: 10px;}
+#foundIt{
+	background:#885159;
+	right: 20px;
+}
+#foundIt .icon{
+	margin: 5px 4px;
+	font-size: 32px;
+}
+#parkedIt{
+	background:#BB3138;
+	right: 20px;
+}
+#parkedIt .icon{
+	margin: 4px 12px;
+	font-size: 30px;
+}
+#directions{
+	background: #886451;
+	left: 20px;
+}
+#directions .icon{
+	margin: 2px 10px;
+	font-size: 25px;
+}
+#hideDirections{
+	background: #528881;
+	left: 20px;
+}
+.icon{
+	margin: 2px 10px;
+	font-size: 30px;
+}
 
-#panel{height:0; overflow: hidden; position: absolute; top: 0; background:white;}
+.tripleMenu{
+	box-shadow: 0 12px 0 2px  white, 0 20px 0 2px  white, 0 28px 0 2px white;
+	width: 45%;
+	margin: auto;
+}
+
+#panel{
+	height:0;
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	background:white;
+}
