UI fixes buttons etc, no biggie, just pretty

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,29 @@
 html { height: 100%; margin: 0; padding: 0;}
 body { height: 98%; margin: 0; padding: 0; background: black; position: relative;}
 .fullScreen{height: 100%; margin: 0; padding: 0; position: relative;}
-#map-canvas { height: 90%; margin-bottom: 1rem; }
+#map-container {height: 90%; margin-bottom: 1rem;}
+#map-canvas {height:100%; z-index:-1;}
+#panel{
+	height:0;
+	overflow: scroll;
+	position: absolute;
+	top: 0;
+	background:white;
+	z-index:800;
+}
+#personalPanel{
+	height:90%;
+	width: 0;
+	overflow: scroll;
+	position: absolute;
+	top:0;
+	bottom:0;
+	left: 0;
+	background:white;	
+	z-index:800;
+}
+
+
 .buttons{
 	height: 2rem;
 	width: 6rem;
@@ -25,11 +47,19 @@ body { height: 98%; margin: 0; padding: 0; background: black; position: relative
 	margin: 5px 4px;
 	font-size: 32px;
 }
-#oops{
+.details{
+	background:#885159;
+	left: 80px;
+}
+.details .icon{
+	margin: 9px 6px;
+	font-size: 24px;
+}
+.oops{
 	background:#BB3138;
 	right: 80px;
 }
-#oops .buttonText{
+.oops .buttonText{
 	font-size: 14px;
 	margin: 10px 3px;
 }
@@ -41,11 +71,11 @@ body { height: 98%; margin: 0; padding: 0; background: black; position: relative
 	margin: 4px 12px;
 	font-size: 30px;
 }
-#directions{
+#showDirections{
 	background: #528881;
 	left: 20px;
 }
-#directions .icon{
+#showDirections .icon{
 	margin: 2px 10px;
 	font-size: 25px;
 }
@@ -63,11 +93,7 @@ body { height: 98%; margin: 0; padding: 0; background: black; position: relative
 	width: 45%;
 	margin: auto;
 }
-
-#panel{
-	height:0;
-	overflow: scroll;
-	position: absolute;
-	top: 0;
-	background:white;
+.glow{
+	color: rgb(200, 200, 0);
+	box-shadow: 0 0 10px 0 rgb(255, 255, 0);
 }
